; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_rtl8366s.c_rtl8366s_set_green.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_rtl8366s.c_rtl8366s_set_green.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtl8366_smi = type { i32 }

@RTL8366S_PHY_NO_MAX = common dso_local global i32 0, align 4
@RTL8366S_GREEN_ETHERNET_TX_BIT = common dso_local global i32 0, align 4
@RTL8366S_GREEN_ETHERNET_RX_BIT = common dso_local global i32 0, align 4
@RTL8366S_GREEN_ETHERNET_CTRL_REG = common dso_local global i32 0, align 4
@RTL8366S_GREEN_ETHERNET_CTRL_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rtl8366_smi*, i32)* @rtl8366s_set_green to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtl8366s_set_green(%struct.rtl8366_smi* %0, i32 %1) #0 {
  %3 = alloca %struct.rtl8366_smi*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.rtl8366_smi* %0, %struct.rtl8366_smi** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %23, label %10

10:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %11

11:                                               ; preds = %19, %10
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @RTL8366S_PHY_NO_MAX, align 4
  %14 = icmp ule i32 %12, %13
  br i1 %14, label %15, label %22

15:                                               ; preds = %11
  %16 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %3, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @rtl8366s_set_green_port(%struct.rtl8366_smi* %16, i32 %17, i32 0)
  br label %19

19:                                               ; preds = %15
  %20 = load i32, i32* %6, align 4
  %21 = add i32 %20, 1
  store i32 %21, i32* %6, align 4
  br label %11

22:                                               ; preds = %11
  br label %23

23:                                               ; preds = %22, %2
  %24 = load i32, i32* %4, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %23
  %27 = load i32, i32* @RTL8366S_GREEN_ETHERNET_TX_BIT, align 4
  %28 = load i32, i32* @RTL8366S_GREEN_ETHERNET_RX_BIT, align 4
  %29 = or i32 %27, %28
  store i32 %29, i32* %7, align 4
  br label %30

30:                                               ; preds = %26, %23
  %31 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %3, align 8
  %32 = load i32, i32* @RTL8366S_GREEN_ETHERNET_CTRL_REG, align 4
  %33 = load i32, i32* @RTL8366S_GREEN_ETHERNET_CTRL_MASK, align 4
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @REG_RMW(%struct.rtl8366_smi* %31, i32 %32, i32 %33, i32 %34)
  ret i32 0
}

declare dso_local i32 @rtl8366s_set_green_port(%struct.rtl8366_smi*, i32, i32) #1

declare dso_local i32 @REG_RMW(%struct.rtl8366_smi*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
